# Python-Web-6

./: .gitignore  Homework 1.py
Homework 1/: Part_1.py
Homework 10/: lru cash.py  main new.py
Homework 10/src/: mongo.py
Homework 11/: .env  pyproject.toml
Homework 11/config/: config.py  db.py
Homework 11/data/: helper.sqlite3
Homework 11/migrations/: env.py
Homework 11/migrations/versions/: 153567aabfe9_initial_migration.py  e22a0da13fb3_initial_migration.py
Homework 11/src/: __init.py  db.py  models.py  phonebook.py  routes.py  users.py
Homework 11/src/Templates/: find.html  landing.html  login.html  mainPage.html  registration.html  signup.html
Homework 11/src/libs/: validation_schemas.py
Homework 11/src/static/css/: find.css  landingcss.css  login.css  mainPage.css  signup.css
Homework 12/: index.html  main.py  pyproject.toml
Homework 12/app/weather/: routes.py  urls.py  views.py
Homework 12/src/static/css/: index.css  style.css
Homework 12/src/templates/: index.html
Homework 12/stylesheets/: main.css
Homework 2/Part_2/: classbook.py  clean.py  notes_book.py
Homework 3/: Dockerfile  main.py  main.spec
Homework 4/: clean re tread.py
Homework 5/: Homework 5.py
Homework 6/: async_clean.py
Homework 7/: client.py  server.py
Homework 8/: bd School.sql  school
Homework 9/: alembic.ini
Homework 9/alembic/: env.py
Homework 9/alembic/versions/: 72ae243345b1_add_table_address.py  b864ae840077_init.py
Homework 9/src/: models.py
